the css for the carousel is 'done' it's the javascript that is a jungle. I have changed a lot in the _carousel.css, and main-carousel.js. ChatGPT is doing the heavy lifting regarding the javascript.

--- a/index.html
+++ b/index.html
@@ -312,13 +312,13 @@
                                 </div>
                                 <div id="c-slide-layer" class="c-middle-layer" draggable="true">
                                     <div class="c-layers left">
-                                        <img src="/images/carousel/tablet/tablet-layer_2-1.svg" alt="silicon image" class="inner-layers image-1">
+                                        <img id="image-1-1" src="/images/carousel/tablet/tablet-layer_2-1.svg" alt="silicon image" class="inner-layers image-1">
                                     </div>
                                     <div class="c-layers middle">
-                                        <img src="/images/carousel/tablet/tablet-layer_2-2.svg" alt="silicon image" class="inner-layers image-2">
+                                        <img id="image-1-2" src="/images/carousel/tablet/tablet-layer_2-2.svg" alt="silicon image" class="inner-layers image-2">
                                     </div>
                                     <div class="c-layers right">
-                                        <img src="/images/carousel/tablet/tablet-layer_2-3.svg" alt="silicon image" class="inner-layers image-3">
+                                        <img id="image-1-3" src="/images/carousel/tablet/tablet-layer_2-3.svg" alt="silicon image" class="inner-layers image-3">
                                     </div> 
                                 </div>
 
@@ -343,13 +343,13 @@
                                 </div>
                                 <div id="c-slide-layer" class="c-middle-layer" draggable="true">
                                     <div class="c-layers left">
-                                        <img src="/images/carousel/desktop/desktop-layer-2-1.svg" alt="silicon image" class="inner-layers image-1">
+                                        <img id="image-2-1" src="/images/carousel/desktop/desktop-layer-2-1.svg" alt="silicon image" class="inner-layers image-1">
                                     </div>
                                     <div class="c-layers middle">
-                                        <img src="/images/carousel/desktop/desktop-layer-2-2.svg" alt="silicon image" class="inner-layers image-2">
+                                        <img id="image-2-2" src="/images/carousel/desktop/desktop-layer-2-2.svg" alt="silicon image" class="inner-layers image-2">
                                     </div>
                                     <div class="c-layers right">
-                                        <img src="/images/carousel/desktop/desktop-layer-2-3.svg" alt="silicon image" class="inner-layers image-3">
+                                        <img id="image-2-3" src="/images/carousel/desktop/desktop-layer-2-3.svg" alt="silicon image" class="inner-layers image-3">
                                     </div>   
                                 </div>
 
