css-ramverk-tailwind-css

--- a/index.html
+++ b/index.html
@@ -384,9 +384,10 @@
     
     <!-- W3schools and then ChatGPT in order to get it implemented -->
     <!-- Main Javascript -->
-    <script src="/js/main.js" defer></script> 
+    <script src="/js/main.js"></script> 
     <!-- Carousel Javascript -->   
-    <script src="/js/main-carousel.js" defer></script>
+    <script src="/js/carousel-mobile.js"></script>
+    <script src="/js/carousel-t-dt.js"></script>
 
 </body>
 </html>
