I eventually made got the navbar to work again, and instead of sticky it's now fixed, still don't know why what happened happened.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <!-- uses _showcase.css -->
             <section id="showcase-section" class="first-section bg-gradient">
                 
-                <div class="container">
+                <div class="container rectifier">
                     
                     <div class="sc-headline">
                         <h1>Manage all Your<br/>Money in One App</h1>
