Just went over small things, changed the faq-section from class to id.

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 
             
             <!-- <a href="https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_accordion">Accordian</a> -->
-            <section class="faq-section">
+            <section id="faq-section">
                 
                     <div class="container faq-container">
 
