Extended the subscribe-section, and created the structure, I also styled it to the 'extent' of my capability.

--- a/index.html
+++ b/index.html
@@ -508,7 +508,32 @@
             <!-- #################################################################################################### -->
             <!-- #################################################################################################### -->
 
+            <!-- Before watching the Tips & Trix video! -->
             <section class="subscribe-section">
+                <div class="container">
+
+                    <div class="sub-box bg-gradient">
+                        
+                        <div class="sub-image-box">
+                            <img id="sub-image" src="./images/mobile+/notification.svg" alt="image 'notification'">
+                            <h4 id="sub-text">Subscribe to our newsletter <span id="d-ext"> to stay informed about the latest updates.</span></h4>                                    
+                        </div>
+
+                        <div class="sub-text-box">
+
+                            <form id="sub-scribe">
+
+                                <div class="input-field">
+                                    <input type="email" class="email">
+                                </div>
+                            </form>
+                            <div class="sub-btn">
+                                <button class="btn btn-primary">Subscribe</button>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
 
             </section>
 
