changed the name from second-app-features-section to app-features-followup-section and added the icon class to the buttons.

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
 
 
-                <section id="second-app-features-section">
+                <section id="app-features-followup-section">
                     
                     <div class="container sf-grid-wrap">
                         <div class="sf-upper-box">
@@ -459,7 +459,7 @@
 
                                 <button id="fs2-btn-1" class="btn btn-primary">
                                     <label for="fs2-btn-1">Learn more </label>
-                                    <i class="fa-solid fa-arrow-right"></i>
+                                    <i class="fa-solid fa-arrow-right icon"></i>
                                 </button>
 
                             </div>
@@ -512,13 +512,13 @@
 
                                 <button id="fs2-btn-2" class="btn btn-primary">
                                     <label for="fs2-btn-2">Learn more</label>
-                                    <i class="fa-solid fa-arrow-right"></i>
+                                    <i class="fa-solid fa-arrow-right icon"></i>
                                 </button>
 
                             </div>
 
                         </div>
-                        
+
                     </div>
 
                 </section>
