--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- <a href="https://www.geeksforgeeks.org/http-headers-content-encoding/">content-encoding: gzip</a> -->
+    content-encoding: gzip
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
