fixed the accordion spelling error in the index.html file, and changed the border for tablet+, and added a border that is activated when clicked, :active, going to use the .active class instead.

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                             </div>
                         </div>
 
-                        <div class="faq-accordian-box">
+                        <div class="faq-accordion-box">
                             <div class="box-box">
                                 <button id="a1" class="faq-accordion">
                                     <label class="a1" for="a1">Is any of my personal information stored in the app?</label>
