--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     <!-- CSS files -->
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/themes.css">
 
     <title>Silicon</title>
 
