Deleted all the old unused files that was placed in a folder.

--- a/index.html
+++ b/index.html
@@ -222,7 +222,9 @@
                     <div class="af-text-box">
                         <div class="af-text-above">
                             <h2>App Features</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Proin volutpat mollis egestas. Nam luctus facilisis ultrices. 
+                                Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
                         </div>
                     
                         <div class="af-text-below">
@@ -751,7 +753,8 @@
                                 <form id="sub-scribe">
                                     <div class="input-field">
                                         <img class="icon" src="/images/light/icons/icon-l-mail-light.svg" alt="">
-                                        <input type="email" id="email" class="email" placeholder="Your Email">
+                                        <!-- https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes/autocomplete#values -->
+                                        <input type="email" id="email" class="email" placeholder="Your Email" autocomplete="off">
                                     </div>
                                 </form>
                                 
