Bad aria-label usage. . . added, need to learn more about labels vs aria-labels.

--- a/index.html
+++ b/index.html
@@ -691,13 +691,13 @@
                         </div>
 
                         <div class="faq-m-contact">
-                            <button id="m-contact-btn" class="btn btn-primary">
+                            <button id="m-contact-btn" class="btn btn-primary" aria-label="contact us now">
                                 <label for="m-contact-btn">Contact us now</label>
                             </button>
                         </div>
 
                         <div class="faq-t-contact">
-                            <button id="call-us" class="call-us tplus-style">
+                            <button id="call-us" class="call-us tplus-style" aria-label="call us">
                                 <img src="/images/light/icons/icon-l-phone-light.svg" alt="phone icon">
                                 <p>Still have questions?</p>
                                 <div class="call-us-flex contact-us">
@@ -705,7 +705,7 @@
                                     <i class="fa-solid fa-arrow-right"></i>
                                 </div>
                             </button>
-                            <button id="message-us" class="message-us tplus-style">
+                            <button id="message-us" class="message-us tplus-style" aria-label="message us">
                                 <img src="/images/light/icons/icon-l-bubble-light.svg" alt="phone icon">
                                 <p>Still have questions?</p>
                                 <div class="message-us-flex contact-us">
@@ -759,7 +759,7 @@
                                 </form>
                                 
                                 <div class="sub-btn">
-                                    <button id="sub-btn" class="btn btn-primary">
+                                    <button id="sub-btn" class="btn btn-primary" aria-label="subscribe">
                                         <label for="sub-btn">Subscribe</label>
                                     </button>
                                 </div>
